<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SetMine</string>
    <string name="test">Location Text</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="slash">/</string>
    <string name="lineup">Lineup</string>
    <string name="view_lineup">View Lineup</string>
    <string name="recent_tag">Play Sets</string>
    <string name="upcoming_tag">upcoming</string>
    <string name="recent">recent</string>
    <string name="upcoming">upcoming</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="venue_map">Venue Map</string>
    <string name="facebook_app_id">648288801959503</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="my_next_event">My Next Event</string>
    <string name="my_next_event_description">Your next recommended show based on what you listen to most</string>
    <string name="activities">Activities</string>
    <string name="activities_description">Recommended sets to fit your current mood or activity</string>
    <string name="my_sets">My Sets</string>
    <string name="new_sets">New Sets</string>
    <string name="my_sets_description">Favorite the Sets you want to listen to later</string>
    <string name="recent_sets">Recent Sets</string>
    <string name="recent_sets_description">Be the first to hear new sets</string>
    <string name="login_header_2">Access Exclusive SetMine Premium Features</string>
    <string name="login_header_1">Create Account (One Time Login)</string>
    <string name="google_maps_api_key">AIzaSyDNioSTZynd_bvoF7fsBVo_2KwUfZ9B1SA</string>
    <string name="sets">sets</string>
    <string name="upcoming_events">upcoming events</string>
    <string name="tracks">tracks</string>


</resources>
